+++++++++++
Python News
+++++++++++

What's New in Python 3.3.0 Beta 2?
==================================

*Release date: xx-xxx-2012*

Core and Builtins
-----------------

- Issue #15404: Refleak in PyMethodObject repr.

- Issue #15394: An issue in PyModule_Create that caused references to
  be leaked on some error paths has been fixed.  Patch by Julia Lawall.

- Issue #15368: An issue that caused bytecode generation to be
  non-deterministic has been fixed.

- Issue #15202: Consistently use the name "follow_symlinks" for
  new parameters in os and shutil functions.

- Issue #15314: __main__.__loader__ is now set correctly during
  interpreter startup

- Issue #15111: When a module imported using 'from import' has an ImportError
  inside itself, don't mask that fact behind a generic ImportError for the
  module itself.

- Issue #15293: Add GC support to the AST base node type.

- Issue #15291: Fix a memory leak where AST nodes where not properly
  deallocated.

- Issue #15110: Fix the tracebacks generated by "import xxx" to not show
  the importlib stack frames.

- Issue #15020: The program name used to search for Python's path is now
  "python3" under Unix, not "python".

- Issue #15033: Fix the exit status bug when modules invoked using -m swith,
  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

- Issue 15307: Virtual environments now use symlinks with framework builds
  on Mac OS X, like other POSIX builds.

Library
-------

- Issue #15041: update "see also" list in tkinter documentation.

- Issue #15413: os.times() had disappeared under Windows.

- Issue #15402: An issue in the struct module that caused sys.getsizeof to
  return incorrect results for struct.Struct instances has been fixed.
  Initial patch by Serhiy Storchaka.
